# turtle-scripts

./: cabal.project
hasktorch-modularize-examples/: hasktorch-modularize-examples.cabal
hasktorch-modularize-examples/app/: Main.hs
hasktorch-modularize-examples/src/: Lib.hs
hasktorch-modularize-examples/test/: Test.hs
nixpkgs-latest-rev/: nixpkgs-unstable-latest.hs
